postgres-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ecograd-db
  namespace: ecograd
spec:
  serviceName: ecograd-db-service
  replicas: 1
  selector:
    matchLabels:
      app: ecograd-db
  template:
    metadata:
      labels:
        app: ecograd-db
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
          subPath: postgres
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
