app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecograd-app
  namespace: ecograd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecograd-app
  template:
    metadata:
      labels:
        app: ecograd-app
    spec:
      containers:
      - name: ecograd-app
        image: tamarakostova/ecograd
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ecograd-app-service
  namespace: ecograd
spec:
  selector:
    app: ecograd-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
