service-node.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: ecograd
spec:
  selector:
    app: ecograd-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
