ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecograd-ingress
  namespace: ecograd
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ecograd.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port: 
              number: 8080
